feat(core): Publish modified base.

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ BOT_TOKEN={your_bot_token_here}
 # Bot ID for miscellaneous operations
 BOT_ID={your_bot_id_here}
 
-# Default prefix to use for message commands
-DEFAULT_PREFIX={your_default_prefix_here}
-
 # Developer ID for developer commands
 DEVELOPER_ID={your_user_id_here}
+
+# OPTIONAL: Virustotal API key for scanning URLs
+VIRUSTOTAL_API_KEY={your_key_here}
