--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 networks:
-    bridge:
-        name: bot_bridge
-        driver: bridge
+     bridge:
+          name: colebot_bridge
+          driver: bridge
 
 services:
-    bot:
-        container_name: bot
-        build:
-            context: .
-            dockerfile: Dockerfile
-        env_file:
-            - .env
-        networks:
-            - bridge
+     bot:
+          container_name: colebot
+          build:
+               context: .
+               dockerfile: Dockerfile
+          env_file:
+               - .env
+          networks:
+               - bridge
