--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "discord-bot-template",
-  "version": "0.0.1",
-  "description": "A starting template to help you build Discord bots.",
+  "name": "colebot",
+  "version": "1.0.0",
+  "description": "My own personal discord utility app.",
   "main": "dist/index.js",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coledotjs/discord-bot-template.git"
+    "url": "git+https://github.com/coledotjs/colebot.git"
   },
   "keywords": [
     "Discord",
-    "Discord-Bot",
-    "Discord-Bot-Template"
+    "Discord-Bot"
   ],
   "author": {
     "name": "coledotjs",
@@ -19,23 +18,24 @@
   },
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/coledotjs/discord-bot-template/issues"
+    "url": "https://github.com/coledotjs/colebot/issues"
   },
-  "homepage": "https://github.com/coledotjs/discord-bot-template#readme",
+  "homepage": "https://github.com/coledotjs/colebot#readme",
   "scripts": {
-    "start": "node --no-deprecation dist/index.js",
+    "start": "node dist/index.js",
     "compile": "tsc && tsc-alias",
     "format": "prettier --write src/**/*.ts"
   },
   "dependencies": {
     "@sapphire/discord-utilities": "^3.5.0",
     "@sapphire/discord.js-utilities": "^7.3.3",
-    "@sapphire/lexure": "^1.1.10",
-    "@sapphire/result": "^2.7.2",
     "discord.js": "^14.20.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "lmdb": "^3.4.1",
+    "ms": "^2.1.3"
   },
   "devDependencies": {
+    "@types/ms": "^2.1.0",
     "@types/node": "^24.0.4",
     "prettier": "^3.6.1",
     "tsc-alias": "^1.8.16",
